--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -1072,8 +1072,8 @@ pt-BR:
   label_attribute_of_assigned_to: "atribuído a %{name}"
   label_attribute_of_fixed_version: "versão %{name}"
   label_copy_subtasks: Copiar subtarefas
-  label_copied_to: copiada
-  label_copied_from: copiado
+  label_copied_to: Copiado para
+  label_copied_from: Copiado de
   label_any_issues_in_project: qualquer tarefa do projeto
   label_any_issues_not_in_project: qualquer tarefa que não está no projeto
   field_private_notes: notas privadas
